首页添加服务器和应用基本信息页面